--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -1,5 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tubes</title>
+    </head>
+
     <body>
-        <h1>Hello World!</h1>
+    <h1>Anggota Kelompok</h1>
+    <ul>
+        <li>Kahfi Rizky Firmansyah</li>
+        <li>Muhammad Luthfi Khusyasy</li>
+    </ul>
     </body>
 </html>
