coba upload file
Co-authored-by: Kwahbwee <IkahnKakap@users.noreply.github.com>

--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -9,10 +9,17 @@
     </head>
 
     <body>
-        <h1>Anggota Kelompok</h1>
-        <ul>
-            <li>Kahfi Rizky Firmansyah</li>
-            <li>Muhammad Luthfi Khusyasy</li>
-        </ul>
+        <div>
+            <h1>Anggota Kelompok</h1>
+            <ul>
+                <li>Kahfi Rizky Firmansyah</li>
+                <li>Muhammad Luthfi Khusyasy</li>
+            </ul>
+        </div>
+        <div>
+            <form enctype="multipart/form-data" method="post">
+                <p>Upload File: <input type="file" name="file" /></p>
+                <p><input type="submit" value="Upload" /></p>
+        </div>
     </body>
 </html>
