--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -18,7 +18,7 @@
         </div>
         <div>
             <form enctype="multipart/form-data" method="post">
-                <p>Upload File: <input type="file" name="file" /></p>
+                <p>Upload File: <input type="file" name="file" accept=".txt, .html" /></p>
                 <p><input type="submit" value="Upload" /></p>
         </div>
     </body>
